--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^7.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
